--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <a href="/blog">blog</a> <a href="/newpost">new post</a> {% block content %} {% endblock %}
+    <a href="/blog">blog</a> <a href="/newpost">new post</a> {% if session['username'] %}
+    <a href="/logout">logout</a> {% else %}
+    <a href="/login">login</a> {% endif %}
+
+    <a href="/">Home</a>{% block content %} {% endblock %}
 </body>
 
 </html>
