--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <a href="/blog">blog</a> <a href="/newpost">new post</a> {% if session['username'] %}
+    <a href="/blog">blog</a> {% if session['username'] %}
+    <a href="/newpost">new post</a>
     <a href="/logout">logout</a> {% else %}
     <a href="/login">login</a> {% endif %}
 
