--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,6 +5,8 @@
         <h2>{{post.title}}</h2>
     </a>
     <p>{{post.body}}</p>
+
+    <em>written by <a href="./blog?user={{post.owner.id}}">{{post.owner.username}}</a></em>
     <hr> {% endfor %}
 </ul>
 {% endblock %}
