--- a/templates/show.html
+++ b/templates/show.html
@@ -2,6 +2,8 @@
 <ul>
     <h2>{{post.title}}</h2>
     <p>{{post.body}}</p>
+
+    <em>written by <a href="./blog?user={{post.owner.id}}">{{post.owner.username}}</a></em>
     <hr>
 </ul>
 {% endblock %}
