--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %} {% block content %}
 <ul>
-    {% for post in posts %}
+    {% for post in posts.items %}
     <a href="./blog?id={{post.id}}">
         <h2>{{post.title}}</h2>
     </a>
     <p>{{post.body}}</p>
 
-    <em>written by <a href="./blog?user={{post.owner.id}}">{{post.owner.username}}</a></em>
+    <em>written by <a href="{{ url_for('blog',user=post.owner.id) }}">{{post.owner.username}}</a></em>
     <hr> {% endfor %}
 </ul>
-{% endblock %}
+
+{% if posts.has_prev %}
+<a href="{{ url_for('blog', page=posts.prev_num) }}">&lt;&lt; Newer posts</a> {% else %} &lt;&lt; Newer posts{% endif %} | {% if posts.has_next %}
+<a href="{{ url_for('blog', page=posts.next_num) }}">Older posts &gt;&gt;</a> {% else%}Older posts &gt;&gt;{% endif %} {% endblock %}
