--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <title>Built-a-Blog</title>
 </head>
 
 <body>
-    <a href="/">Home</a>
-    <a href="/blog">All posts</a> {% if session['username'] %}
-    <a href="/newpost">new post</a>
-    <a href="/logout">logout</a> {% else %}
-    <a href="/login">login</a> {% endif %} {% block content %} {% endblock %}
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/blog">All Posts</a></li>
+                <li><a href="/newpost">New Post</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            {% if session['username'] %}
+                <li><a href="/logout">Logout</a></li>
+            {% else %}
+                <li><a href="/login">Login</a></li>
+            {% endif %}
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        {% block content %} {% endblock %}
+    </div>
 </body>
 
 </html>
